--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="bg-white px-4 py-3 rounded-full text-lg capitalize text-zinc-900 w-fit font-bold">Shop By Category</button>
         </div>
         <div>
-            <img src="/assets/images/iphone.png" alt="iphone" srcset="" />
+            <img src="./assets/images/iphone.png" alt="iphone" srcset="" />
         </div>
     </div>
     <!--Product Item 2-->
@@ -32,13 +32,13 @@
             <button class="bg-white px-4 py-3 rounded-full text-lg capitalize text-zinc-900 w-fit font-bold">Shop By Category</button>
         </div>
         <div>
-            <img src="/assets/images/laptop.png" alt="laptop" srcset="" />
+            <img src="./assets/images/laptop.png" alt="laptop" srcset="" />
         </div>
     </div>
     <!--Product Item 3-->
     <div class="bg-red-600 flex flex-col gap-8 rounded-2xl px-7 pb-7 pt-7">
         <div>
-            <img src="/assets/images/head.png" alt="head" srcset="" />
+            <img src="./assets/images/head.png" alt="head" srcset="" />
         </div>
         <div class="flex flex-col justify-start gap-5">
             <p class="font-sans text-lg text-white font-normal uppercase">Best Past Fast</p>
@@ -50,7 +50,7 @@
      <!--Product Item 4-->
      <div class="bg-green-800 flex flex-col gap-8 rounded-2xl px-7 pb-7 pt-7">
         <div>
-            <img src="/assets/images/watch.png" alt="watch" srcset="" />
+            <img src="./assets/images/watch.png" alt="watch" srcset="" />
         </div>
         <div class="flex flex-col justify-start gap-5">
             <p class="font-sans text-lg text-white font-normal uppercase">Best Past Fast</p>
